feat: add new Clement submissions

--- a/src/content/spells/combat/support.mdx
+++ b/src/content/spells/combat/support.mdx
@@ -39,3 +39,15 @@ import Spell from '../../../components/Spell.astro'
     description='You teleport forward, becoming invisible and leaving behind a decoy to suffer the consequences.'
     versions={["1.20.1"]}
 />
+
+## Fire Jump
+<Spell
+    author='Clement446'
+    glyphs={["projectile","burst","sensitive","life_link","propagate homing","ignite","flare","heal","reset","blink"]}
+    description='This spell is based on the &quot;collapsing stars&quot; base.
+Tweak and adjust the augments as wished.
+The **FIRE FOCUS** or the **KINDLING THREAD** are required for this spell to work.
+When using the kindling thread, you can remove the &quot;Ignite&quot; glyph.'
+    versions={["1.20.1","1.19.2","1.18.2"]}
+    addons={["elemental"]}
+/>
