--- a/src/content/spells/other/utility.mdx
+++ b/src/content/spells/other/utility.mdx
@@ -109,3 +109,13 @@ import Spell from '../../../components/Spell.astro'
     description='Pull a creature to you, even from deep in the void.  Size is not a limitation, make new friends today.'
     versions={["1.19.2","1.20.1"]}
 />
+
+## Isolating Bubble
+<Spell
+    author='Clement446'
+    glyphs={["projectile","burst","aoe","aoe","aoe","sensitive","dampen","phantom_block","amplify"]}
+    description='Creates a bubble of mageblocks around the enemy.
+Conjure mageblock can be replaced with place bock or conjure terrain.
+In forests or places with a lot of grass, using the Conjure Water glyph can be worth it.'
+    versions={["1.20.1","1.19.2"]}
+/>
