--- a/src/content/spells/combat/aggressive.mdx
+++ b/src/content/spells/combat/aggressive.mdx
@@ -295,3 +295,12 @@ Using an Ignition Thread at level three will enable it to skip I-frames.'
     versions={["1.20.1"]}
     addons={["trinkets","elemental"]}
 />
+
+## Minor Icicle
+<Spell
+    author='Clement446'
+    glyphs={["touch","sensitive","conjure_water","freeze","amplify","amplify","launch","leap","amplify","amplify"]}
+    description='Launch a block of ice at the target.
+Requires the Blockshaper Focus.'
+    versions={["1.20.1","1.19.2"]}
+/>
