feat: add more spells

--- a/src/content/spells/combat/defensive.mdx
+++ b/src/content/spells/combat/defensive.mdx
@@ -74,3 +74,52 @@ Note: Warp scroll should be set to a place far away. Examples: In the void, a pi
     description='You conjure a cohort of magical orbs that will repel and contain those who dare approach you.'
     versions={["1.20.1"]}
 />
+
+## Explosive Reciprocity
+<Spell
+    author='Danicus'
+    glyphs={["self","explosion","dampen","amplify","amplify","aoe","aoe","aoe","aoe","aoe"]}
+    description='A spell meant to be inscribed on reactive armor, it releases an explosion around its wearer upon taking damage, pushing and lacerating enemies around it, without devastating the terrain.'
+    versions={["1.20.1"]}
+/>
+
+## Vengeful Curse
+<Spell
+    author='Danicus'
+    glyphs={["retaliate","life_link","hex","amplify","amplify","wither","amplify","amplify"]}
+    description='Vengeful spell to inscribe in reactive armor, curses the attacker to wither, weakening against magic and sharing the wearer&apos;s pain.'
+    versions={["1.20.1"]}
+    addons={["additions","elemental"]}
+/>
+
+## Restoration of One
+<Spell
+    author='Danicus'
+    glyphs={["self","dispel","heal","amplify"]}
+    description='Restorative spell, intended to be inscribed in reactive armor, restores the wearer&apos;s condition, stitching wounds and purging effects.'
+    versions={["1.20.1"]}
+/>
+
+## Shield
+<Spell
+    author='Lyrellion'
+    glyphs={["underfoot","phantom_block","aoe","aoe","pierce","pierce","pierce","duration_down","duration_down"]}
+    description='A modified version of Xacris&rsquo; Tiny Hut, designed for use in combat.  Creates a protective dome of mageblocks around you for a moment to block an incoming projectile or attack before dissipating..'
+    versions={["1.20.1"]}
+/>
+
+## Fire Rune
+<Spell
+    author='Lyrellion'
+    glyphs={["touch","rune","hex","ignite","flare"]}
+    description='Place a defensive rune on a wall or floor that will trigger when an enemy touches it.  Use directly in combat as a damage dealing spell or use Runic Chalk to make permanent and place a source jar nearby to make an effective base defense.'
+    versions={["1.20.1"]}
+/>
+
+## Wall of Force
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile","accelerate","wall","sensitive","phantom_block","pierce","amplify"]}
+    description='Create a permanent wall of mageblocks at the point of impact.'
+    versions={["1.20.1"]}
+/>
