--- a/src/content/spells/combat/support.mdx
+++ b/src/content/spells/combat/support.mdx
@@ -51,3 +51,11 @@ When using the kindling thread, you can remove the &quot;Ignite&quot; glyph.'
     versions={["1.20.1","1.19.2","1.18.2"]}
     addons={["elemental"]}
 />
+
+## Archers
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile","summon_undead","split","split","split","split","pierce","amplify","amplify","amplify"]}
+    description='Summon a squad of skeletons armed with enchanted bows to assist you in combat.  Alternatively, replace the Pierce with an additional Amplify to get a squad of melee skeletons instead.'
+    versions={["1.20.1"]}
+/>
