--- a/src/content/spells/other/automation.mdx
+++ b/src/content/spells/other/automation.mdx
@@ -54,3 +54,21 @@ import Spell from '../../../components/Spell.astro'
     versions={["1.20.1"]}
     addons={["tmg"]}
 />
+
+## Conjure Glass
+<Spell
+    author='WayofTime'
+    glyphs={["touch","conjure_terrain","aoe","aoe","crush","break","smelt","pickup"]}
+    description='Put this spell on a manipulation turret or use a shapers focus to conjure a 3x3 area of sand that is smelted and picked up.
+Put a chest or a storage lectern next to the turret to store the glass.'
+    versions={["1.20.1","1.19.2"]}
+    addons={["elemental"]}
+/>
+
+## Autoharvest
+<Spell
+    author='Multiple'
+    glyphs={["projectile","linger","sensitive","aoe","aoe","aoe","grow","grow","harvest","pickup"]}
+    description='Used to grow and harvest entire fields of crops in a single spell.  Target a slab or fence post in the center of the area you wish to harvest.  May be placed on a turret for easy automated harvesting and collection. '
+    versions={["1.20.1"]}
+/>
