--- a/src/content/spells/other/exploration.mdx
+++ b/src/content/spells/other/exploration.mdx
@@ -39,3 +39,12 @@ import Spell from '../../../components/Spell.astro'
     versions={["1.20.1"]}
     addons={["neg"]}
 />
+
+## Instant Transmission
+<Spell
+    author='Xacris'
+    glyphs={["ray","aoe","aoe","aoe","aoe","aoe","aoe","aoe","blink"]}
+    description='Instantly teleport up to where you are looking, up to 128 blocks away'
+    versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
+    addons={["tmg","neg"]}
+/>
