--- a/src/content/spells/other/utility.mdx
+++ b/src/content/spells/other/utility.mdx
@@ -119,3 +119,11 @@ Conjure mageblock can be replaced with place bock or conjure terrain.
 In forests or places with a lot of grass, using the Conjure Water glyph can be worth it.'
     versions={["1.20.1","1.19.2"]}
 />
+
+## Simple Mining
+<Spell
+    author='Pan Et Rosa'
+    glyphs={["projectile","break","aoe","aoe","aoe","aoe","pierce","pierce","pierce","extract","pickup"]}
+    description='A simple, inexpensive and highly effective spell for mining. Best used on a wand, allowing for another glyph slot which can be used to accelerate the projectile or expand the mined area. Testing in the Nether with an extended Scrying ritual produced over 2 stacks of ancient debris in 15 minutes, as well as several stacks of quartz ore and modded ores. Use with jar of voiding to replenish mana by deleting bulk blocks.'
+    versions={["1.20.1"]}
+/>
