feat: add new spells

--- a/src/content/spells/other/exploration.mdx
+++ b/src/content/spells/other/exploration.mdx
@@ -23,14 +23,6 @@ import Spell from '../../../components/Spell.astro'
     versions={["1.20.1"]}
 />
 
-## Dash
-<Spell
-    author='Arin'
-    glyphs={["self","leap","amplify","amplify"]}
-    description='Best used with the Flight spell for a practically free extension to your flight times, basically acts as a rocket.<br/><br/><b>Note:</b> use more Amplify Glyphs for higher speeds and more distance covered'
-    versions={["1.20.1","1.19.2"]}
-/>
-
 ## Rainbow Road
 <Spell
     author='Xacris'
@@ -47,4 +39,13 @@ import Spell from '../../../components/Spell.astro'
     description='Instantly teleport up to where you are looking, up to 128 blocks away'
     versions={["1.16.5","1.18.2","1.19.2","1.20.1"]}
     addons={["tmg","neg"]}
+/>
+
+## Bridge Chasm
+<Spell
+    author='Lyrellion'
+    glyphs={["projectile","reverse_direction","conjure terrain","pierce","pierce","pierce","pierce","pierce","pierce","pierce"]}
+    description='Fire at the opposite wall of a chasm to create a narrow bridge you can cross.'
+    versions={["1.20.1"]}
+    addons={["tmg","neg","elemental"]}
 />
