--- a/src/content/spells/other/fun.mdx
+++ b/src/content/spells/other/fun.mdx
@@ -21,3 +21,11 @@ import Spell from '../../../components/Spell.astro'
     description='Conjures a wall that will shoot fireworks into the sky! They fly higher than vanilla fireworks can, makes for an impressive display'
     versions={["1.19.2","1.20.1"]}
 />
+
+## Containment Swap
+<Spell
+    author='Xacris'
+    glyphs={["projectile","dispel","rune","exchange"]}
+    description='This spell, when cast at the top side of a containment jar, will release the contained creature and then you will swap places with it. Best used when cast through an Enchanter&apos;s Eye for remote casting. Leave in style by releasing a Warden!'
+    versions={["1.19.2","1.20.1"]}
+/>
