--- a/src/content/spells/other/utility.mdx
+++ b/src/content/spells/other/utility.mdx
@@ -127,3 +127,11 @@ In forests or places with a lot of grass, using the Conjure Water glyph can be w
     description='A simple, inexpensive and highly effective spell for mining. Best used on a wand, allowing for another glyph slot which can be used to accelerate the projectile or expand the mined area. Testing in the Nether with an extended Scrying ritual produced over 2 stacks of ancient debris in 15 minutes, as well as several stacks of quartz ore and modded ores. Use with jar of voiding to replenish mana by deleting bulk blocks.'
     versions={["1.20.1"]}
 />
+
+## Noisy Detailing
+<Spell
+    author='Xacris'
+    glyphs={["projectile","exchange","randomize","aoe","pickup"]}
+    description='This deceptively simple spell will replace a 2x2 of blocks with a random selection from your hotbar, to add variation. To get the most out of this spell, get used to aiming between blocks rather than at blocks'
+    versions={["1.20.1","1.19.2"]}
+/>
