--- a/src/content/spells/other/fun.mdx
+++ b/src/content/spells/other/fun.mdx
@@ -29,3 +29,12 @@ import Spell from '../../../components/Spell.astro'
     description='This spell, when cast at the top side of a containment jar, will release the contained creature and then you will swap places with it. Best used when cast through an Enchanter&apos;s Eye for remote casting. Leave in style by releasing a Warden!'
     versions={["1.19.2","1.20.1"]}
 />
+
+## Rain of Judgement
+<Spell
+    author='Marcielle'
+    glyphs={["projectile","burst","sensitive","chain","propagate_arc","explosion","aoe"]}
+    description='Continuous rain of explosions from the sky.'
+    versions={["1.20.1"]}
+    addons={["tmg","neg"]}
+/>
