feat: update spells

--- a/src/content/spells/combat/aggressive.mdx
+++ b/src/content/spells/combat/aggressive.mdx
@@ -304,3 +304,21 @@ Using an Ignition Thread at level three will enable it to skip I-frames.'
 Requires the Blockshaper Focus.'
     versions={["1.20.1","1.19.2"]}
 />
+
+## Wrath of God
+<Spell
+    author='Eggovolt'
+    glyphs={["projectile","pierce","linger","sensitive","aoe","propagate_arc","split","explosion","aoe","lightning"]}
+    description='The People&apos;s Nuke; a low-addon spell that creates a centralized explosion from which many, many projectiles rain down over the course of about 6 seconds. All of these spawn lightning. Very flashy and good if you don&apos;t mind terrain destruction.'
+    versions={["1.18.2"]}
+    addons={["elemental"]}
+/>
+
+## Eviscerate
+<Spell
+    author='SirDragonBlaster'
+    glyphs={["touch","blink","ignite","wind_shear","heal","wind_shear","heal","wind_shear","heal","wind_shear"]}
+    description='Use with a warp scroll bound to around y 300,000 in your offhand. Can one tap just about anything, but it is kinda pointless for PvE, as you don&apos;t get drops. Works best if you first use hex. Requires thread of kindling 3 or a fire focus.'
+    versions={["1.20.1"]}
+    addons={["elemental"]}
+/>
