--- a/src/content/spells/combat/defensive.mdx
+++ b/src/content/spells/combat/defensive.mdx
@@ -104,7 +104,7 @@ Note: Warp scroll should be set to a place far away. Examples: In the void, a pi
 <Spell
     author='Lyrellion'
     glyphs={["underfoot","phantom_block","aoe","aoe","pierce","pierce","pierce","duration_down","duration_down"]}
-    description='A modified version of Xacris&rsquo; Tiny Hut, designed for use in combat.  Creates a protective dome of mageblocks around you for a moment to block an incoming projectile or attack before dissipating..'
+    description='A modified version of Xacris&rsquo; Tiny Hut, designed for use in combat. Creates a protective dome of mageblocks around you for a moment to block an incoming projectile or attack before dissipating..'
     versions={["1.20.1"]}
 />
 
@@ -112,7 +112,7 @@ Note: Warp scroll should be set to a place far away. Examples: In the void, a pi
 <Spell
     author='Lyrellion'
     glyphs={["touch","rune","hex","ignite","flare"]}
-    description='Place a defensive rune on a wall or floor that will trigger when an enemy touches it.  Use directly in combat as a damage dealing spell or use Runic Chalk to make permanent and place a source jar nearby to make an effective base defense.'
+    description='Place a defensive rune on a wall or floor that will trigger when an enemy touches it. Use directly in combat as a damage dealing spell or use Runic Chalk to make permanent and place a source jar nearby to make an effective base defense.'
     versions={["1.20.1"]}
 />
 
@@ -121,5 +121,16 @@ Note: Warp scroll should be set to a place far away. Examples: In the void, a pi
     author='Lyrellion'
     glyphs={["projectile","accelerate","wall","sensitive","phantom_block","pierce","amplify"]}
     description='Create a permanent wall of mageblocks at the point of impact.'
+    versions={["1.20.1"]}
+/>
+
+## Schroedinger's Mage Bubble
+<Spell
+    author='Clement446'
+    glyphs={["self","burst","dampen","sensitive","phantom_block","reset","blink","dampen","dampen","invisibility"]}
+    description='Use Case : PVP
+Type : Mixup
+Should be used as a mixup to the traditional Mageblock Sphere.
+Are you in the mage bubble or not? That is the question that your enemy will ask himself.'
     versions={["1.20.1"]}
 />
