--- a/src/content/spells/combat/support.mdx
+++ b/src/content/spells/combat/support.mdx
@@ -56,6 +56,22 @@ When using the kindling thread, you can remove the &quot;Ignite&quot; glyph.'
 <Spell
     author='Lyrellion'
     glyphs={["projectile","summon_undead","split","split","split","split","pierce","amplify","amplify","amplify"]}
-    description='Summon a squad of skeletons armed with enchanted bows to assist you in combat.  Alternatively, replace the Pierce with an additional Amplify to get a squad of melee skeletons instead.'
+    description='Summon a squad of skeletons armed with enchanted bows to assist you in combat. Alternatively, replace the Pierce with an additional Amplify to get a squad of melee skeletons instead.'
     versions={["1.20.1"]}
+/>
+
+## Instant Army
+<Spell
+    author='ence'
+    glyphs={["touch","wall","sensitive","aoe","accelerate","accelerate","extend_time","extend_time","phantom_block","animate_block"]}
+    description='Call forth a horde of soldiers to fight for you, or to just make getting to you challenging.'
+    versions={["1.19.2"]}
+/>
+
+## Terrible Web
+<Spell
+    author='ence'
+    glyphs={["projectile","burst","sensitive","aoe","aoe","aoe","rune","snare","gravity","extend_time"]}
+    description='Any hostile caught in the center of the web will not be moving for a while. Do mind the cleanup, though.'
+    versions={["1.19.2"]}
 />
